<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Vendedor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/datos_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Datos"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/txt_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/producto"
                 />

            <EditText
                android:id="@+id/txt_tiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tiempo"
                />

            <EditText
                android:id="@+id/txt_condiciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/condiciones"
                 />

            <EditText
                android:id="@+id/txt_tienda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tienda"
                 />

            <EditText
                android:id="@+id/txt_idUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/id_usuario"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textAlignment="center"
                android:text="@string/s_lista" />

            <ListView
                android:id="@+id/lv_datosUsuario"
                android:layout_width="match_parent"
                android:layout_height="417dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>